Rev. 3.2.6: Globale Fehlerkorrekturen und letzte Ergänzungen.

--- a/Diskussion.tex
+++ b/Diskussion.tex
@@ -3,7 +3,7 @@
 In diesem Kapitel wird analytisch auf die vorangegangenen Resultate eingegangen und die Schwellenbestimmung der Rater und Software evaluiert. Im Zuge dessen werden die in Kapitel 1.3 aufgeführten Fragen chronologisch beantwortet:
 %
 \begin{tabbing}
-	Ist die Spiroergometrie mit dem metabolicscan durchzuführen?\\
+	Ist die Spiroergometrie mit dem metabolicscan durchführbar?\\
 	Welche Methode zur Schwellenbestimmung ist optimal?\\
 	Kann die VT2 mit den neuen Methoden genauer bestimmt werden, als mit RQ~=~1?
 \end{tabbing}
@@ -63,7 +63,7 @@ Die Kategorisierung wurde aus zeitlichen Gründen mit der ersten Version der gra
 	\centering
 	%\includegraphics[scale=0.7]{Bilder/r_eqco2}
 	\includegraphics[scale=0.95]{Bilder/korr_eqco2.eps}
-	\caption[Korrelation der \acrshort{EQCO2}-Werte von Ratern und Software]{Korrelation der mit dem \acrshort{EQCO2} bestimmten VT2 von Ratern und Software in Form einer Regressionsgeraden; aufgetragen wird die gemittelte VT2 der Rater gegenüber der VT2 der Software in \si{\per\minute}}
+	\caption[Korrelation der \acrshort{EQCO2}-Werte von Ratern und Software]{Korrelation der mit dem \acrshort{EQCO2} bestimmten VT2 von Ratern und Software nach einer Regressionsanalyse; aufgetragen wird die gemittelte VT2 der Rater gegenüber der VT2 der Software in \si{\per\minute}}
 	\label{pic:pic28}
 \end{figure}
 %
@@ -97,10 +97,10 @@ Für Proband 11m (26 Jahre) entspricht die VT2 nach Rater~1 83,7~\%~\gls{HFmax} 
 %
 \subsection{\acrshort{VE}/\acrshort{VCO2} als geeignete Referenzmethode}
 %
-Die Abweichungen zwischen Ratern und Software beträgt für diese Methode im Mittel \SI{-4,07}{\per\minute} $\pm$\SI{11}{\per\minute}. Verglichen mit der \gls{EQCO2}-Methode weisen die Ergebnisse größere Unterschiede auf und die Schwellenbestimmungen geschahen weniger eindeutig. Der Korrelationskoeffizient $r$ nimmt den Wert $0,816$ an. 15 von 28 Kurven für diese Methode waren gut. Ein Beispiel bietet Abb. \ref{pic:pic20} von Proband 20m, wo die Zunahme der \gls{VCO2} deutlich zu sehen ist. Rater und Software kamen bei dieser Grafik zu sehr ähnlichen Ergebnissen.\\
+Die Abweichungen zwischen Ratern und Software beträgt im Mittel \SI{-4,07}{\per\minute} $\pm$\SI{11}{\per\minute}. Verglichen mit der \gls{EQCO2}-Methode weisen die Ergebnisse größere Unterschiede auf und die Schwellenbestimmungen geschahen weniger eindeutig. Der Korrelationskoeffizient $r$ nimmt den Wert $0,816$ an. 15 von 28 Kurven für diese Methode waren gut. Ein Beispiel bietet Abb. \ref{pic:pic20} von Proband 20m, wo die Zunahme der \gls{VCO2} deutlich zu sehen ist. Rater und Software kamen bei dieser Grafik zu sehr ähnlichen Ergebnissen.\\
 Einige Kurven waren jedoch kritisch, da nicht differenzierbar. Bei dieser Methode wirkten diese Artefakte sich allerdings nicht so stark auf die Schwellenbestimmung aus, da sie, wie z.B. in Abb. \ref{pic:pic21} zu erkennen, ausschließlich in der ersten Messhälfte auftraten. Im Bereich der VT2 waren die Verläufe der Graphen meistens gut auszuwerten.\\
 Jedoch traten auch in Feld 4 häufiger Plots auf, bei denen die Messpunkte dicht beieinander lagen und nicht genau ersichtlich war, in welcher Stufe der erste Anstieg auftrat. Hier kann beispielhaft Abb. \ref{pic:pic19} von Proband 9m gesichtet werden. Da der Graph in Feld 4 recht linear verläuft, war die subjektive Auswertung erschwert und die Rater bestimmten die VT2 später als die Software, die den Vorteil der mathematisch genauen Detektion der Steigungsänderung innehat.\\
-Für die Auswertung von \gls{VE}/\gls{VCO2} lässt sich schlussfolgern, dass sie in Verbindung mit Mittelwerten und Stufentests erschwert wird, da der Graph anfällig für Artefakte ist. Eine \gls{SD} von $\pm$11 \si{\per\minute} zeigt, dass häufig keine eindeutigen Ergebnisse erzielt werden und diese auch um die mittlere Abweichung sehr stark streuen. Die Software birgt auch bei dieser Methode allerdings den Vorteil, dass die mathematische Bestimmung von Steigungsänderungen gut gelingt und die Methode somit für Vergleiche nutzbar wird. Eine erneute Auswertung mit einem optimierten Algorithmus könnte zu verbesserten und mehr korrelierenden Ergebnissen führen.
+Für die Auswertung von \gls{VE}/\gls{VCO2} lässt sich schlussfolgern, dass die Methode in Verbindung mit Mittelwerten und Stufentests erschwert wird, da der Graph anfällig für Artefakte ist. Eine \gls{SD} von $\pm$11 \si{\per\minute} zeigt, dass häufig keine eindeutigen Ergebnisse erzielt werden und diese auch um die mittlere Abweichung sehr stark streuen. Die Software birgt auch bei dieser Methode allerdings den Vorteil, dass die mathematische Bestimmung von Steigungsänderungen gut gelingt und sie somit für Vergleiche nutzbar wird. Eine erneute Auswertung mit einem optimierten Algorithmus könnte zu verbesserten Ergebnissen führen.
 %
 \subsection{Problematik bei der Bestimmung der VT1}
 %
@@ -113,7 +113,7 @@ Auch differenzierbare und stetig steigende V-Slopes, die jedoch viele Messpunkte
 %
 \subsubsection{\gls{EQO2}-Methode}
 %
-Abb. \ref{pic:pic17} zeigt beispielhaft eine Grafik, mit der die VT1 eindeutig bestimmbar war. Auf den Tiefpunkt nach der 2. Stufe folgt ein stetiger Kurvenanstieg, sodass dort der Bereich der VT1 assoziiert werden kann. Rater und Software kamen zu sehr ähnlichen Ergebnissen die maximal um \SI{4}{\per\minute} differierten (siehe. Tab. \ref{tab:tabelle5}).\\
+Abb. \ref{pic:pic17} zeigt beispielhaft eine Grafik, mit der die VT1 anhand des \gls{EQO2} eindeutig bestimmbar war. Auf den Tiefpunkt nach der 2. Stufe folgt ein stetiger Kurvenanstieg, sodass dort der Bereich der VT1 assoziiert werden kann. Rater und Software kamen zu sehr ähnlichen Ergebnissen die maximal um \SI{4}{\per\minute} differierten (siehe. Tab. \ref{tab:tabelle5}).\\
 Mit 15 Plots wies allerdings die Mehrheit aller generierten Grafiken Schwankungen im 2. Feld auf. Hierfür kann die Grafik von Proband 8m als Beispiel verwendet werden. Der Tiefpunkt der \gls{EQO2}-Kurve liegt in Abb. \ref{pic:pic18} erst zwischen Stufe 6 und 7. Hier bestimmte Rater 2 dementsprechend auch die VT1. Da allerdings an diesem Punkt auch die \gls{EQCO2}-Kurve ansteigt und ein sehr leichter Anstieg der \gls{EQO2}-Kurve bereits nach Stufe 2 auftritt, wo das \gls{EQCO2} noch nicht zunimmt, wurde die VT1 von Rater 1 und auch von der Software dort identifiziert.\\
 Ein weiteres Beispiel einer solchen Differenz zwischen den Ratern liegt bei Proband 21m vor (siehe Abb. \ref{subpic:pic2}). Erneut kann diese durch die Schwankungen des \gls{EQO2} in der entsprechenden Abb. \ref{pic:pic21} begründet werden. Rater 1 und Software nahmen hier auch den ersten \gls{EQO2}-Anstieg als die VT1 an, während Rater 2 die Schwelle am tatsächlichen Wertetiefpunkt der Kurve bestimmte.\\
 Obwohl die optische Bewertung der \gls{EQO2}-Kurven positiver ausfiel und mehr Plots als gut kategorisiert wurden, fällt $r$ mit $0,464$ schlechter aus, als beim V-Slope. Dies liegt daran, dass bei einigen Plots bzw. Probanden die Differenzen zwischen Ratern und Software sehr groß waren. Dementsprechend kann auch diese Methode nicht als gut bezeichnet werden. Die durchschnittliche Differenz der Ergebnisse beträgt \SI{7,96}{\per\minute} (siehe Abb. \ref{pic:pic24}) und ist im Vergleich mit den anderen Methoden am höchsten.
@@ -121,7 +121,7 @@ Obwohl die optische Bewertung der \gls{EQO2}-Kurven positiver ausfiel und mehr P
 \subsubsection{Fazit zur VT1}
 %
 Letztlich zeigen die behandelten Beispielplots und die Diagramme in Abb. \ref{pic:pic23} und \ref{pic:pic24}, dass die Ergebnisse häufiger stark differieren und oftmals kein eindeutiger Bereich für die VT1 mittels V-Slope und \gls{EQO2} bestimmt werden kann, da viele Plots aufgrund von Schwankungen kritisch waren. Die Ergebnisse beider Methoden weisen jeweils eine \gls{SD} von $\pm$14 \si{\per\minute} auf. Die gemittelte Differenz zwischen Ratern und Software fällt bei der \gls{EQO2}-Methode größer aus, was an zwei sehr großen Differenzen mit \SIlist{46,50}{\per\minute} liegt, die den Gesamtdurchschnitt bei 28 Probanden stark beeinflussen. Die beiden Korrelationskoeffizienten liegen relativ mittig von null und eins und belegen somit, dass die algorithmischen sowie durch Rater bestimmten VT1 der Testmessungen aufgrund der häufig starken Differenzen nur bedingt in Zusammenhang zu bringen sind und die verwendeten Methoden dementsprechend mit dieser Art der Durchführung einer Leistungsdiagnostik nicht optimal sind.\\
-Die Artefakte, welche sowohl in den V-Slope- als auch in den \gls{VE}/\gls{VCO2}-Plots auftraten, jedoch beim V-Slope wesentlich signifikanter waren, da sie im Bereich der annehmbaren VT1 entstanden, können inzwischen auf die fehlerhafte Berechnung der \gls{AF} durch den MATLAB-Algorithmus zurückgeführt werden. Eine Analyse der anhand der Rohdaten erstellten Matrizen in MATLAB im Falle von Proband 21 (siehe Abb. \ref{pic:pic21}) ergab, dass während der betroffenen Stufen 4 und 5 nur jeweils drei Atemzüge durch den Algorithmus erkannt wurden. Da sich die \gls{AF} auf die Berechnung der \gls{VCO2} und \gls{VO2} auswirkt, kam es dementsprechend zu verfälschten Werten. Der Algorithmus wurde in Bezug auf die Auswertung der Flow-Rohdaten angepasst und könnte inzwischen andere Plots generieren. Die Überprüfung dieser These steht allerdings aus und ist nicht Teil dieser Arbeit.
+Die Artefakte beim V-Slope im Bereich der annehmbaren VT1 können inzwischen auf die fehlerhafte Berechnung der \gls{AF} durch den MATLAB-Algorithmus zurückgeführt werden. Eine Analyse der anhand der Rohdaten erstellten Matrizen in MATLAB im Falle von Proband 21 (siehe Abb. \ref{pic:pic21}) ergab, dass während der betroffenen Stufen 4 und 5 nur jeweils drei Atemzüge durch den Algorithmus erkannt wurden. Da sich die \gls{AF} auf die Berechnung der \gls{VCO2} und \gls{VO2} auswirkt, kam es dementsprechend zu verfälschten Werten. Der Algorithmus wurde in Bezug auf die Auswertung der Flow-Rohdaten angepasst und könnte inzwischen andere Plots generieren. Die Überprüfung dieser These steht allerdings aus und ist nicht Teil dieser Arbeit.
 %
 \subsection{Problematik von RQ = 1}
 %
@@ -139,8 +139,8 @@ Für die Spiroergometrie existieren keine validen Methoden zur Plausibilitätsko
 \label{eq:formel15}
 \end{flalign}
 %
-\gls{VE} und \gls{VO2} sollen demnach einen idealerweise linearen Verlauf über die Leistung annehmen. Da die Berechnungen jedoch kaum anthropometrischen Daten oder individuellen Trainingszustände einbeziehen, wurde auf die mathematische Art der Überprüfung wegen der großen Varianz an Trainingszuständen in dieser Arbeit verzichtet. Allerdings kann mithilfe eines grafischen Vergleichs der Parameter der Verlauf einer Messung analysiert und bewertet werden.\\
-In den Feldern 5 und 6 der in Kapitel 3 abgebildeten 6-Felder-Grafiken wurden die \gls{VE} und die \gls{VO2} hierfür jeweils der \gls{W} gegenübergestellt. Einige dieser Felder weisen allerdings analoge Schwankungen zu denen in Feld 1 und 4 auf und können empirisch ebenfalls mit der fehlerhafte Atemzugerkennung erklärt werden. Als alternative Plausibilitätskontrolle wurde stattdessen der Vergleich mit den Daten der HUNT 3 Studie angestellt, wie in Tab. \ref{tab:tabelle8} aufgeführt.
+\gls{VE} und \gls{VO2} sollen demnach einen idealerweise linearen Verlauf über die Leistung annehmen. Da die Berechnungen jedoch kaum anthropometrische Daten oder individuelle Trainingszustände einbeziehen, wurde auf die mathematische Art der Überprüfung wegen der großen Varianz an Trainingszuständen in dieser Arbeit verzichtet. Allerdings kann mithilfe eines grafischen Vergleichs der Parameter der Verlauf einer Messung analysiert und bewertet werden.\\
+In den Feldern 5 und 6 der in Kapitel 3 abgebildeten 6-Felder-Grafiken wurden die \gls{VE} und die \gls{VO2} hierfür jeweils der \gls{W} gegenübergestellt. Einige dieser Felder weisen allerdings analoge Schwankungen zu denen in Feld 1 und 4 auf und können ebenfalls mit der fehlerhaften Atemzugerkennung erklärt werden. Als alternative Plausibilitätskontrolle wurde stattdessen der Vergleich mit den Daten der HUNT 3 Studie angestellt, wie in Tab. \ref{tab:tabelle8} aufgeführt.
 %
 \begin{table}[H]
 	\centering
@@ -184,30 +184,31 @@ In den Feldern 5 und 6 der in Kapitel 3 abgebildeten 6-Felder-Grafiken wurden di
 	\label{tab:tabelle8}
 \end{table}
 %
-In der Tabelle werden die gemessenen \gls{VO2max}-Werte der einzelnen Probanden mit den Referenzwerten der entsprechenden Alterklasse sowie des Geschlechts aus der HUNT 3 Studie verglichen~\cite{Loe.2014}. Von 28 Probanden lagen 13 ober- oder unterhalb des entsprechenden Durchschnitts. Es muss jedoch hier berücksichtigt werden, dass die HUNT 3 Studie auf Laufbändern durchgeführt wurde. Bei der Laufbandergometrie liegt die \gls{VO2max} generell höher, da die Muskelgruppen und deren Wirkungsgrad sich zur Fahrradergometrie unterscheiden~\cite{Kroidl.2015}. Unter diesem Aspekt besteht eine geringere Vergleichbarkeit, da die restlichen 15 Probanden sich jedoch innerhalb des Durchschnittsbereichs bzw. der \gls{SD} befanden, kann diese Kontrolle zumindest differenziert einen Aufschluss über den hinreichenden Abschluss einer Spiroergometrie geben. 
+In der Tabelle werden die gemessenen \gls{VO2max}-Werte der einzelnen Probanden mit den Referenzwerten der entsprechenden Altersklasse sowie des Geschlechts aus der HUNT 3 Studie verglichen~\cite{Loe.2014}. Von 28 Probanden lagen 13 ober- oder unterhalb des entsprechenden Durchschnitts. Es muss jedoch hier berücksichtigt werden, dass die HUNT 3 Studie auf Laufbändern durchgeführt wurde. Bei der Laufbandergometrie liegt die \gls{VO2max} generell höher, da die Muskelgruppen und deren Wirkungsgrad sich zur Fahrradergometrie unterscheiden~\cite{Kroidl.2015}. Unter diesem Aspekt besteht eine geringere Vergleichbarkeit, da die restlichen 15 Probanden sich jedoch innerhalb des Durchschnittsbereichs bzw. der \gls{SD} befanden, kann diese Kontrolle zumindest differenziert einen Aufschluss über den hinreichenden Abschluss einer Spiroergometrie geben. 
 %
 \section{Potentielle Fehlerquellen bei der Spiroergometrie}
 %
 \subsection{Probandenbedingte Faktoren}
 %
-Bei der Spiroergometrie können Probanden die Ergebnisse negativ beeinflussen, indem sie ihre Atmung durch die ungewohnten Bedingungen stark verändern, sodass diese unphysiologisch wird. Bei wenigen Personen konnte mithilfe von Feld 5 und 6 beobachtet werden, dass sie zu Beginn der Leistungsdiagnostik eine recht hohe \gls{VE} besaßen und die \gls{AF} schnell zunahm. Da eine erneute Kompilierung z.B. bei Proband 21m nicht für bessere Plots in Feld 5 und 6 sorgte, resultiert dies aus einem anderen Fehler. Dieser kann auf das Mundstück bzw. den Bakterienfilter zurückgeführt werden. Durch diesen erhöht sich der Atemwiderstand, dessen Höhe von jeder Person subjektiv anders wahrgenommen wird. 7 der 28 Probanden empfanden die Ergonomie des Mundstücks als unangenehm und deuteten nach dem Test an, dass dieses die Atmung gerade zu Beginn einer Messphase erschwert habe. Dadurch neigten die Probanden dazu, tiefer und gleichzeitig schneller zu atmen. Infolgedessen stieg die \gls{VE} relativ zur \gls{VO2} höher, da der Körper zu diesem Zeitpunkt noch nicht die große Menge an aufgenommenem \gls{O2} verwerten konnte. Des Weiteren können Fehler entstehen, wenn Personen das Mundstück nicht rechtzeitig zu Munde führen. Einer Probandin rutschte das Mundstück bei erhöhter Belastung sogar mehrmals aus dem Mund. Die Dauer der Messphase beträgt stets \SI{30}{\second}. Zu Beginn einer Leistungsdiagnostik bei geringer Leistung ist die \gls{AF} bei den meisten gesunden Menschen noch recht niedrig. Die durchschnittliche \gls{AF} eines Erwachsenen in Ruhe beträgt ca. \SIrange{7}{20}{\per\minute}~\cite{Larsen.2017}. Kommt es zu Problemen mit dem Mundstück, sodass gewisse Schwellwerte bei der Atemzugerkennung der Software nicht überschritten und weniger Atemzüge erfasst werden, wird die gemittelte \gls{AF} und dadurch auch die \gls{VE} kleiner. Das wiederum kann zu veränderten Plots führen, wenn auf einen kleineren Mittelwert in der nächsten Stufe ein normaler folgt, wodurch die Steigung zwischen diesen zwei Punkten verfälscht wird und nicht mehr den ventilatorischen Reaktionen des Körpers entspricht. Zuletzt muss die Ernährung unmittelbar vor einer Spiroergometrie berücksichtigt werden (siehe Kapitel 2.1.2). Zwar wird zukünftig der RQ nicht mehr für die Schwellenbestimmung verwendet, jedoch sollte der Grund-Laktat-Gehalt nicht durch erhöhte Zuckerzufuhr erhöht werden, um die Ausgangsbedingungen in Bezug auf die \gls{VCO2} zu normalisieren.
+Bei der Spiroergometrie können Probanden die Ergebnisse negativ beeinflussen, indem sie ihre Atmung durch die ungewohnten Bedingungen stark verändern, sodass diese unphysiologisch wird. Bei wenigen Personen konnte mithilfe von Feld 5 und 6 beobachtet werden, dass sie zu Beginn der Leistungsdiagnostik eine recht hohe \gls{VE} besaßen und die \gls{AF} schnell zunahm. Da eine erneute Kompilierung z.B. bei Proband 21m nicht für bessere Plots in Feld 5 und 6 sorgte, resultiert dies aus einem anderen Fehler. Dieser kann auf das Mundstück bzw. den Bakterienfilter zurückgeführt werden. Durch diesen erhöht sich der Atemwiderstand, dessen Höhe von jeder Person subjektiv anders wahrgenommen wird. 7 der 28 Probanden empfanden die Ergonomie des Mundstücks als unangenehm und deuteten nach dem Test an, dass dieses die Atmung gerade zu Beginn einer Messphase erschwert habe. Dadurch neigten die Probanden dazu, tiefer und gleichzeitig schneller zu atmen. Infolgedessen stieg die \gls{VE} relativ zur \gls{VO2} höher, da der Körper zu diesem Zeitpunkt noch nicht die große Menge an aufgenommenem \gls{O2} verwerten konnte.\\
+Des Weiteren können Fehler entstehen, wenn Personen das Mundstück nicht rechtzeitig zu Munde führen. Einer Probandin rutschte das Mundstück bei erhöhter Belastung sogar mehrmals aus dem Mund. Die Dauer der Messphase beträgt stets \SI{30}{\second}. Zu Beginn einer Leistungsdiagnostik bei geringer Leistung ist die \gls{AF} bei den meisten gesunden Menschen noch recht niedrig. Die durchschnittliche \gls{AF} eines Erwachsenen in Ruhe beträgt ca. \SIrange{7}{20}{\per\minute}~\cite{Larsen.2017}. Kommt es zu Problemen mit dem Mundstück, sodass gewisse Schwellwerte bei der Atemzugerkennung der Software nicht überschritten und weniger Atemzüge erfasst werden, wird die gemittelte \gls{AF} und dadurch auch die \gls{VE} kleiner. Das wiederum kann zu veränderten Plots führen, wenn auf einen kleineren Mittelwert in der nächsten Stufe ein normaler folgt, wodurch die Steigung zwischen diesen zwei Punkten verfälscht wird und nicht mehr den ventilatorischen Reaktionen des Körpers entspricht. Zuletzt muss die Ernährung unmittelbar vor einer Spiroergometrie berücksichtigt werden (siehe Kapitel 2.1.2), um den Grund-Laktat-Gehalt nicht durch erhöhte Zuckerzufuhr zu verändern und die Ausgangsbedingungen in Bezug auf die \gls{VCO2} zu normalisieren.
 %
 \subsection{Anwenderbedingte Faktoren}
 %
-Durch den Anwender der Spiroergometrie können ebenfalls Fehler verursacht werden. Beispielsweise kann oben genannter zeitlicher Verzug auch entstehen, wenn der Anwender dem Probanden das Mundstück zu spät reicht, sodass die Atemzugerfassung ebenfalls verfälscht wird. Schon eine falsche Vorbereitung der Belastungsphase kann zu Fehlern führen, wenn z.B. die Sattelhöhe nicht korrekt justiert oder ein unpassendes Belastungsprotokoll bestimmt wurde. Es ist wichtig, dass der Anwender im Vorwege den Trainingszustand einer Person korrekt einschätzen kann, um entsprechende Anpassungen am Protokoll vorzunehmen. Allerdings ist hier auch die deutliche Kommunikation mit dem Probanden zwingend erforderlich.
+Durch den Anwender der Spiroergometrie können ebenfalls Fehler verursacht werden. Beispielsweise kann vorher genannter zeitlicher Verzug auch entstehen, wenn der Anwender dem Probanden das Mundstück zu spät reicht, sodass die Atemzugerfassung ebenfalls verfälscht wird. Schon eine falsche Vorbereitung der Belastungsphase kann zu Fehlern führen, wenn z.B. die Sattelhöhe nicht korrekt justiert oder ein unpassendes Belastungsprotokoll bestimmt wurde. Es ist wichtig, dass der Anwender im Vorwege den Trainingszustand einer Person korrekt einschätzen kann, um entsprechende Anpassungen am Protokoll vorzunehmen. Allerdings ist hier auch die deutliche Kommunikation mit dem Probanden zwingend erforderlich.
 %
 \subsection{Umweltbedingte Faktoren}
 %
 Wie in Kapitel 2.1.2 erwähnt, sind die Messbedingungen für eine Respirationsanalyse einzuhalten. Raumtemperatur und \gls{CO2}-Gehalt in der Luft wirken sich auf die \gls{HF} und \gls{La-}-Kinetik aus, was ebenfalls im Falle einer Nichtbeachtung zu Fehlern führt. Jedoch wurde der Raum vor jedem Test belüftet und die Temperatur im Toleranzbereich zwischen \SIrange{18}{22}{\degreeCelsius} gehalten. Die \gls{CO2}-Belastung der Atemluft in $10^{-6}$ (parts per million) wurde durch ein Messgerät sehr genau überprüft, um sicherzustellen, dass die Kalibrierung des metabolicscan vor jedem Test auf denselben Grundbedingungen basierte.
 %
-\section{Limitation}
+\section{Limitationen}
 %
 Das Projekt war limitiert durch eine relativ kleine Teilnehmerzahl und dadurch sehr ungleiche Verteilung der unterschiedlichen Probandengruppen. Um die Aussagekraft der Ergebnisse zu erhöhen und diese beispielsweise besser mit der HUNT 3 Studie vergleichen zu können, wäre eine deutlich größere Probandengruppe notwendig gewesen. Die HUNT 3 Studie ist jedoch auch nicht optimal, da die Werte für Fahrrad- und Laufergometrie, wie bereits angedeutet, verschieden sind. Verlässliche Studien zur Fahrradergometrie mit großer Probandenzahl liegen jedoch momentan nicht vor.\\
 Die Evaluierung war auch durch eine kleine Menge an wertenden Personen und einen gleichzeitigen Mangel an validen Referenzwerten eingeschränkt. Generell sind Normwerte im Bereich der Sportwissenschaft schwer zu definieren, da die Individualität an Zuständen zu groß ist. Dies bedeutet, dass bei der Analyse der individuellen Leistungsfähigkeit noch sensibler auf eventuelle Einflussfaktoren eingegangen werden muss.
 %
 \section{Ausblick und Handlungsempfehlung}
 %
-Ausgehend von den Ergebnissen dieser Arbeit wurde mit dem \gls{EQCO2} eine neue Methode für die VT2-Bestimmung erarbeitet, welche weiter optimiert zukünftig als Algorithmus die Basis für die Auswertung durch die \gls{CCPS} darbieten kann. In Verbindung mit dem Trainingszonenmodell nach Wilfried Kindermann können mit dieser Methode die Ziele der Firma cardioscan umgesetzt werden. Das Leistungsdiagnostik-Setup bietet jedoch Optimierungsmöglichkeiten. Zum Ersten wären eventuell Alternativen zu dem Mundstück, z.B. in Form einer Maske sinnvoll, da die Ergonomie des Mundstücks moniert wurde. Hier könnten weitere Tests mit alternativen Komponenten durchgeführt werden. Zum Zweiten gestaltet sich die Mittelung der Messwerte über die Gesamtanzahl an Atemzügen pro Stufe als nicht optimal, da dadurch die vorangegangen beschriebenen Verfälschung der Plots auftreten können. Eine gänzliche "`breath-by-breath"'-Auswertung jedes Atemzugs sollte wegen der zu großen Datenmenge zwar auch nicht in Betracht bezogen werden, jedoch könnten alternative Mittelungsverfahren (z.B. die "`gleitende"' Mittelung~\cite{Kroidl.2015}) getestet werden.\\
+Ausgehend von den Ergebnissen dieser Arbeit wurde mit dem \gls{EQCO2} eine neue Methode für die VT2-Bestimmung erarbeitet, welche weiter optimiert zukünftig als Algorithmus die Basis für die Auswertung durch die \gls{CCPS} darbieten kann. In Verbindung mit dem Trainingszonenmodell nach Wilfried Kindermann können mit dieser Methode die Ziele der Firma cardioscan umgesetzt werden. Das Leistungsdiagnostik-Setup bietet jedoch Optimierungsmöglichkeiten. Zum Ersten wären eventuell Alternativen zu dem Mundstück, z.B. in Form einer Maske sinnvoll, da die Ergonomie des Mundstücks moniert wurde. Hier könnten weitere Tests mit alternativen Komponenten durchgeführt werden. Zum Zweiten gestaltet sich die Mittelung der Messwerte über die Gesamtanzahl an Atemzügen pro Stufe als nicht optimal, da dadurch die zuvor beschriebenen Verfälschungen der Plots auftreten können. Eine gänzliche "`breath-by-breath"'-Auswertung jedes Atemzugs sollte wegen der zu großen Datenmenge zwar auch nicht in Betracht bezogen werden, jedoch könnten alternative Mittelungsverfahren (z.B. die "`gleitende"' Mittelung~\cite{Kroidl.2015}) getestet werden.\\
 Die algorithmische Auswertung könnte für die anschließende Interpretation optimiert werden, indem z.B. ein Algorithmus programmiert wird, der ein Abflachen der \gls{HF}-Kurve zum Ende einer Leistungsdiagnostik überprüft. Dies könnte den Anwender dabei unterstützen, zu bewerten, ob eine Person tatsächlich ausbelastet ist. In der HUNT 3 Studie wurde ermittelt, bei wie viel Prozent der \gls{HFmax} die VT2 einer Person erreicht worden war. Eine abflachende \gls{HF}-Kurve wäre ein Indikator für das Erreichen der \gls{HFmax}. Durch einen Vergleich der \gls{HF} bei der VT2 und der \gls{HFmax} könnten Ergebnisse zusätzlich evaluiert werden.\\
 Zum Abschluss bleibt zu erwähnen, dass trotz algorithmischer Auswertung einer Spiroergometrie eine Interpretation der Ergebnisse seitens einer Person mit Fachwissen unabdingbar ist. Die gezeigten Grafiken, anhand derer die Schwellen bestimmt wurden, bieten lediglich die Grundlage und müssen in ein optimiertes Interface der \gls{CCPS} implementiert werden. Die komplette Thematik der Atemgasanalyse ist im Allgemeinen sehr komplex und sollte daher nicht von ungeschultem Personal behandelt werden. cardioscan betreibt für alle diagnostischen Anwendungen eine Academy, welche in regelmäßigen Intervallen Seminare und Workshops durch Schulungsreferenten und -referentinnen beim Kunden durchführen lässt. Bei diesen Seminaren sollten auch die Details der Vorbereitung behandelt werden. Die Software könnte die Anwender auch auf diesem Wege unterstützen, indem z.B. der Timer im Interface durch einen Hinweis ergänzt wird, der daran erinnert, das Mundstück zur Messung vorzubereiten, um Messfehler zu reduzieren.
 %
