--- a/Zusammenfassung.tex
+++ b/Zusammenfassung.tex
@@ -1,4 +1,4 @@
 \chapter*{Abstract}\addcontentsline{toc}{chapter}{Abstract}
 
-Im Rahmen dieser Bachelorthesis wurden vier ausgewählte Methoden zur Bestimmung der 1. sowie 2. ventilatorischen Schwelle in Verbindung mit dem Spiroergometer \textsl{metabolicscan} der Firma cardioscan GmbH angewandt und evaluiert, welche als Basis für die Trainingszonendefinition dienen. Bislang wurde das Gerät nur für die Ruhestoffwechselanalyse und indirekte Kalorimetrie getestet und soll künftig mit den geeigneten Algorithmen auch zur Leistungsdiagnostik angeboten werden. Um Messdaten zu erheben, wurde hierzu ein Projekt in Form einer Versuchsreihe mit insgesamt 28 internen und externen Probanden durchgeführt. Es wurde angestrebt, eine möglichst breite Varianz an Testpersonen zu erreichen. Jede Person absolvierte das gleiche, zuvor festgelegte Prozedere. Als Interface zur Durchführung fungierte die bereits existierende, jedoch zu optimierende cardioscan Checkpoint Software. Alle Messungen wurden nach dem Stufentest-Verfahren auf einem Fahrradergometer durchgeführt. Die respiratorischen Rohdaten des metabolicscan werden durch die Software in Textdateien gespeichert, die mit einem MATLAB-Programm eingelesen und zur grafischen Auswertung vorbereitet wurden. Die Bestimmung der ventilatorischen Schwellen erfolgte individuell durch zwei menschliche Rater und durch einen MATLAB-Algorithmus. Ziel dieser Arbeit war es, die Schwellenbestimmung methodenkritisch zu evaluieren und für die Firma cardioscan die optimale Methode zu erarbeiten, mit der zukünftig die Basis für die Trainingszonendefinition bereitgestellt werden soll.\\
+Im Rahmen dieser Bachelorthesis wurden vier ausgewählte Methoden zur Bestimmung der 1. sowie 2. ventilatorischen Schwelle, welche als Basis für die Trainingszonendefinition dienen, in Verbindung mit dem Spiroergometer \textsl{metabolicscan} der Firma cardioscan GmbH angewandt und evaluiert. Bislang wurde das Gerät nur für die Ruhestoffwechselanalyse und indirekte Kalorimetrie getestet und soll künftig mit den geeigneten Algorithmen auch zur Leistungsdiagnostik angeboten werden. Um Messdaten zu erheben, wurde hierzu ein Projekt in Form einer Versuchsreihe mit insgesamt 28 internen und externen Probanden durchgeführt. Es wurde angestrebt, eine möglichst breite Varianz an Testpersonen zu erreichen. Jede Person absolvierte das gleiche, zuvor festgelegte Prozedere. Als Interface zur Durchführung fungierte die bereits existierende, jedoch zu optimierende cardioscan Checkpoint Software. Alle Messungen wurden nach dem Stufentest-Verfahren auf einem Fahrradergometer durchgeführt. Die respiratorischen Rohdaten des metabolicscan werden durch die Software in Textdateien gespeichert, die mit einem MATLAB-Programm eingelesen und zur grafischen Auswertung vorbereitet wurden. Die Bestimmung der ventilatorischen Schwellen erfolgte individuell durch zwei menschliche Rater und durch einen MATLAB-Algorithmus. Ziel dieser Arbeit war es, die Schwellenbestimmung methodenkritisch zu evaluieren und für die Firma cardioscan die optimale Methode zu erarbeiten, mit der zukünftig die Basis für die Trainingszonendefinition bereitgestellt werden soll.\\
 Aus der Evaluierung der bestimmten Schwellen resultierten Probleme bei der Bestimmung der VT1, die auf die Art der Durchführung einer Spiroergometrie bei cardioscan zurückzuführen sind. Die VT2 konnte mithilfe der Kohlenstoffdioxid-Äquivalent-Methode zum größten Teil optimal bestimmt werden, sodass diese, nach Referenzierung und Abwägung der Vor- und Nachteile, der Firma cardioscan als neuer Algorithmus empfohlen wird. In Kombination mit dieser Methode können nach einem Modell von Wilfried Kindermann vom Institut für Sport- und Präventivmedizin Saarbrücken auch die Trainingszonen definiert werden, sodass die Ziele des Unternehmens hiermit erreicht wurden.
