--- a/Methode.tex
+++ b/Methode.tex
@@ -26,7 +26,7 @@ Als generelle Ausschlusskriterien für Probanden waren akute fiebrige Infekte, H
 %
 \subsection{Vorbereitung \& Erwartungswerte}
 %
-Unmittelbar vor einem Test wurden die Probanden ein weiteres Mal über die Durchführung sowie eventuelle Risiken informiert und hatten eine Einwilligungserklärung zu unterzeichnen. Anschließend wurde ein Anamnesebericht ausgefüllt. Dafür wurden zunächst die Körpergröße sowie das Körpergewicht mithilfe der Ultraschallmessstation \textsl{seca 287} ermittelt. In Folge eines kurzen Interviews wurde der Trainings- und Gesundheitszustand der Person notiert. Mit dem cs-3 effect wurde ein zweiminütiges Ruhe-\gls{EKG} erstellt. Danach konnten durch die \gls{CCPS} Auffälligkeiten der \gls{HF} und des Herzrhythmus im Ruhezustand detektiert und betroffene Personen ggf. abgelehnt werden. Zur Erfassung der \gls{HF} während der Belastungsphase wurde ein Pulsgurt der Firma \textsl{Polar} angelegt, welcher mit dem Ergometer und der Software kommuniziert. Der Sattel des Ergometers war individuell für jeden Probanden ungefähr auf Hüfthöhe zu positionieren, sodass der Kniewinkel nicht mehr als $90$ \textdegree{} betrug, da dies eine höhere muskuläre Belastung beim Treten bewirken kann.
+Unmittelbar vor einem Test wurden die Probanden ein weiteres Mal über die Durchführung sowie eventuelle Risiken informiert und hatten eine Einwilligungserklärung zu unterzeichnen. Anschließend wurde ein Anamnesebericht ausgefüllt. Dafür wurden zunächst die Körpergröße sowie das Körpergewicht mithilfe der Ultraschallmessstation \textsl{seca 287} ermittelt. In Folge eines kurzen Interviews wurde der Trainings- und Gesundheitszustand der Person notiert. Mit dem cs-3 effect wurde ein zweiminütiges Ruhe-\gls{EKG} erstellt. Danach konnten durch die \gls{CCPS} Auffälligkeiten der \gls{HF} und des Herzrhythmus im Ruhezustand detektiert und betroffene Personen ggf. abgelehnt werden. Zur Erfassung der \gls{HF} während der Belastungsphase wurde ein Pulsgurt der Firma \textsl{Polar} angelegt, welcher mit dem Ergometer und der Software via Bluetooth kommuniziert. Der Sattel des Ergometers war individuell für jeden Probanden auf ungefährer Hüfthöhe zu positionieren, sodass der Kniewinkel nicht mehr als $90$ \textdegree{} betrug, da dies eine höhere muskuläre Belastung beim Treten bewirken kann.
 %
 \subsubsection{Berechnung der maximalen Leistung}
 %
@@ -59,10 +59,10 @@ Die Differenz zwischen den beiden Sollwerten ist mit \SI{15}{\watt} recht gering
 %
 \subsubsection{Individuelles Belastungsprotokoll}
 %
-Mithilfe der maximalen Belastungsintensität wurde anschließend das Stufenprotokoll festgelegt. Die Dauer einer Belastungsstufe betrug zwei Minuten, wobei während der letzten \SI{30}{\second} einer Stufe die respiratorischen Werte erfasst wurden. Empfehlungen für Tests auf Fahrradergometern liegen zwischen \SIlist{7;26}{\minute} Gesamtdauer~\cite{Midgley.2008}. Darum wurde mit $n = 6$ ein Minimalwert für die zu bewältigenden Stufen \`{a} \SI{2}{\minute} bestimmt, da die Dauer eines Test somit \SI{12}{\minute} betrug und die Gefahr einer unzureichenden kardiorespiratorischen Ausbelastung reduziert wurde~\cite{Wonisch.2008}. Es war allerdings bei trainierten Personen davon auszugehen, dass sie die Soll-Belastung übertreffen und daher mehr als sechs Stufen ertragen. Deshalb wurde diese Zahl nur als ungefährer Richtwert verwendet. Als Inkrement wurde das Schema der \gls{WHO} mit \SI{25}{\watt} Steigerung je Stufe eingestellt. Dieser Standard galt für untrainierte wie trainierte Probanden, da hiermit eine Ausbelastung weitestgehend erreichbar sei~\cite{Trappe.2000}. Um die passende Anfangsbelastung zu bestimmen, wurde beispielsweise nach folgender Rechnung gearbeitet:
+Mithilfe der maximalen Belastungsintensität wurde anschließend das Stufenprotokoll festgelegt. Die Dauer einer Belastungsstufe betrug zwei Minuten, wobei während der letzten \SI{30}{\second} einer Stufe die respiratorischen Werte erfasst wurden. Empfehlungen für Tests auf Fahrradergometern liegen zwischen \SIlist{7;26}{\minute} Gesamtdauer~\cite{Midgley.2008}. Darum wurde mit $n = 6$ ein Minimalwert für die zu bewältigenden Stufen \`{a} \SI{2}{\minute} bestimmt, da die Dauer eines Test somit \SI{12}{\minute} betrug und die Gefahr einer unzureichenden kardiorespiratorischen Ausbelastung reduziert wurde~\cite{Wonisch.2008}. Es war allerdings bei trainierten Personen davon auszugehen, dass sie die Soll-Belastung übertreffen und daher mehr als sechs Stufen ertragen. Deshalb wurde diese Zahl nur als ungefährer Richtwert verwendet. Als Inkrement wurde das Schema der \gls{WHO} mit \SI{25}{\watt} Steigerung je Stufe eingestellt. Dieser Standard galt für untrainierte Probanden, da hiermit eine Ausbelastung weitestgehend erreichbar sei~\cite{Trappe.2000}. Um die passende Anfangsbelastung zu bestimmen, wurde beispielsweise nach folgender Rechnung gearbeitet:
 %
 \begin{equation}
-W_{Start} = W_{max} \text{(berechnet)} - 6 * 25 \watt 
+W_{Start} = W_{max} \text{ (berechnet)} - 6 * 25 \watt 
 \label{eq:formel13}
 \end{equation}
 %
@@ -73,7 +73,7 @@ W_{Start} = 174\watt - 6 * 25\watt = 174\watt - 150\watt = 24\watt
 \end{equation*}
 %
 Da diese Intensität allerdings nur minimal über der Leerlast durch den Eigenwiderstand des Ergometers mit \SI{15}{\watt} liegt, wurde bei dieser Probandin sowie bei allen weiteren sportlich aktiven Personen das Schema des \myglsgen{BAL} angewandt und eine Anfangsbelastung von \SI{50}{\watt} oder höher gewählt~\cite{Trappe.2000}. Dennoch wurde stets darauf geachtet, jene nicht zu überschätzen und damit eine muskuläre Erschöpfung vorzuziehen. Das Protokoll wurde schließlich in einen Softwaredialog der \gls{CCPS} eingepflegt. In dem Dialog war die Einstiegsbelastung gemäß der Berechnungen mit Berücksichtigung des Trainingszustands, das Inkrement mit \SI{25}{\watt}, die Stufendauer mit \SI{1,5}{\minute} sowie das Messintervall mit \SI{30}{\second} einzutragen. Generell ist bei keinem Menschen vorhersehbar, welche Anfangsbelastung und welches Inkrement optimal sind. Neben der körperlichen Leistungsfähigkeit spielt vor allem die persönliche Motivation bei der Durchführung des Tests eine wichtige Rolle~\cite{Kroidl.2015}. Daher mussten Abbruchkriterien definiert werden, die als Indiz für Ausbelastung gelten können.
-%
+\clearpage
 \subsubsection{Abbruchkriterien}
 %
 Es wurden Abbruchkriterien nach Empfehlungen von Finger et al. festgelegt~\cite{Finger.2013}:
@@ -117,11 +117,11 @@ In Abb. \ref{pic:pic12} ist die Oberfläche der \gls{CCPS} zu sehen, wie sie wä
 	\label{pic:pic12}
 \end{figure}
 %
-Rechts unten ist mit drei Sekunden Latenz ein Plot mit den \gls{O2}- und \gls{CO2}-Konzentrationen eines Atemzugs eingebunden. Der blaue Graph stellt die \gls{O2}-, der grüne die \gls{CO2}-Konzentration dar. Das große Fenster links oben bildet eine Verlaufsdarstellung mit Mittelwerten bestimmter Parameter ab. Anhand der X-Achse des Koordinatensystems sind Stufennummerierungen zu erkennen. Auf der linken Y-Achse sind die Belastung in \si{\watt} und die \gls{VO2} in \si{\litre\per\minute} und auf der rechten der Puls bzw. die \gls{HF} in \si{\per\minute} und der \gls{RQ} definiert. Im Plot sind in verschiedenen Farben sind die pro Stufe ermittelten Mittelwerte für die \gls{VO2} (blau), den Puls (braun) und den \gls{RQ} (türkis) in Form eines Graphen sowie die während einer Stufe eingestellten Leistung als Balkendiagramm (hellblau). Unterhalb des Plots werden die Durchschnittswerte für besagte Parameter visualisiert, die bei der zuletzt abgeschlossenen Stufe durch die Software ausgewertet wurden. Außerdem werden im unteren Abschnitt des hellblauen Interfaces die während des letzten erkannten Atemzugs berechneten Werte für die \gls{VO2}, \gls{VCO2}, das \gls{AMV} und die \gls{AF} mitgeschrieben. Des Weiteren wird die vom Pulsgurt, via Ergometer an die Software übermittelte \gls{HF} angezeigt. Mithilfe dieses Interfaces konnte der Verlauf der Spiroergometrie überwacht und verfolgt werden. Die Rohdaten der Sensoren wurden im Hintergrund aufgezeichnet, in \acrshort{CSV}-Dateien abgespeichert und konnten anschließend mit MATLAB\footnote{Programmcode: siehe Anhang C} ausgewertet werden.
+Rechts unten ist mit drei Sekunden Latenz ein Plot mit den \gls{O2}- und \gls{CO2}-Konzentrationen eines Atemzugs eingebunden. Der blaue Graph stellt die \gls{O2}-, der grüne die \gls{CO2}-Konzentration dar. Das große Fenster links oben bildet eine Verlaufsdarstellung mit Mittelwerten bestimmter Parameter ab. Anhand der X-Achse des Koordinatensystems sind Stufennummerierungen zu erkennen. Auf der linken Y-Achse sind die Belastung in \si{\watt} und die \gls{VO2} in \si{\litre\per\minute} und auf der rechten der Puls bzw. die \gls{HF} in \si{\per\minute} und der \gls{RQ} definiert. Im Plot sind in verschiedenen Farben die Mittelwerte für die \gls{VO2} (blau), den Puls (braun) und den \gls{RQ} (türkis) in Form von Graphen sowie die während einer Stufe eingestellte Leistung als Balkendiagramm (hellblau) abgebildet. Unterhalb des Plots werden die Durchschnittswerte für besagte Parameter visualisiert, die bei der zuletzt abgeschlossenen Stufe durch die Software ausgewertet wurden. Außerdem werden im unteren Abschnitt des hellblauen Interfaces die während des letzten erkannten Atemzugs berechneten Werte für die \gls{VO2}, \gls{VCO2}, das \gls{AMV} und die \gls{AF} mitgeschrieben. Des Weiteren wird die vom Pulsgurt, via Ergometer an die Software übermittelte \gls{HF} angezeigt. Mithilfe dieses Interfaces konnte der Verlauf der Spiroergometrie überwacht und verfolgt werden. Die Rohdaten der Sensoren wurden im Hintergrund aufgezeichnet, in \acrshort{CSV}-Dateien abgespeichert und konnten anschließend mit MATLAB\footnote{Programmcode: siehe Anhang C} ausgewertet werden.
 %
 \section{Datenverarbeitung \& Generierung der Plots}
 %
-Mithilfe mehrerer MATLAB-Skripte wurden die Sensor-Rohdaten automatisiert eingelesen und zur weiteren Verarbeitung vorbereitet. Anschließend wurden die einzelnen Atemzüge anhand des Flows detektiert, für jede Belastungsstufe gemittelt und in eine Ausgabematrix geschrieben. Anhand dieser wurden die Mittelwerte in mehreren Bezugssystemen grafisch aufgetragen. Am Ende der Ausführung der MATLAB-Skripte wurden die Graphen für V-Slope, \gls{EQO2}/\gls{EQCO2}, \gls{VE}/\gls{VCO2}, \gls{RQ}, \gls{VE}/\gls{W} und \gls{VO2}/\gls{W} in eine übersichtliche und vereinfachte 6-Felder-Grafik eingefügt und als Bild-Datei gespeichert. 
+Mithilfe mehrerer MATLAB-Funktionen wurden die Sensor-Rohdaten automatisiert eingelesen und zur weiteren Verarbeitung vorbereitet. Anschließend wurden die einzelnen Atemzüge anhand des Flows detektiert, für jede Belastungsstufe gemittelt und in eine Ausgabematrix geschrieben. Anhand dieser wurden die Mittelwerte in mehreren Bezugssystemen grafisch aufgetragen. Am Ende der Ausführung des MATLAB-Programms wurden die Graphen für V-Slope, \gls{EQO2}/\gls{EQCO2}, \gls{VE}/\gls{VCO2}, \gls{RQ}, \gls{VE}/\gls{W} und \gls{VO2}/\gls{W} in eine übersichtliche und vereinfachte 6-Felder-Grafik eingefügt und als Bild-Datei gespeichert. 
 %
 \section{Auswertung \& Referenzierung der Ergebnisse}
 %
@@ -129,7 +129,7 @@ Schlussendlich wurden alle Plots zunächst subjektiv ausgewertet und die ventila
 %
 \section{Probandendaten}
 %
-Tab. \ref{tab:tabelle3} listet die Probanden-Daten Geschlecht, Gewicht in \si{\kilogram}, Körpergröße in \si{\centi\metre}, Alter in Lebensjahren, sportliche Aktivität in \si{\hour} pro Woche und die eigene Aussage, ob man Raucher ist oder nicht, auf. Unter den 28 Probanden waren zwölf Frauen und 16 Männer sowie fünf Raucher. Das Gesamtdurchschnittsalter betrug 33 Jahre. Das durchschnittliche Alter der Männer lag bei 35, das der Frauen bei 29 Jahren. Unter den Testpersonen befanden sich fünf Leistungssportler, von denen einer Olympionik ist. Im Mittel lag die wöchentliche sportliche Aktivität der Männer bei sieben, die der Frauen bei sechs Stunden. Anzumerken ist, dass es sich bei diesen Zahlen um subjektive Einschätzungen der Personen handelt und eventuell nicht die realen Gegebenheiten widerspiegeln. Dies liegt daran, dass "`sportliche Aktivität"' nicht eindeutig definiert ist und einige Probanden keine festen Trainingszeiten besitzen und daher unregelmäßig zum Sport gehen. Die Angaben wurden genutzt, um das Belastungsprotokoll, wie in Kapitel 2.2.1 beschrieben, anzupassen.
+Tab. \ref{tab:tabelle3} listet die Probanden-Daten Geschlecht, Gewicht in \si{\kilogram}, Körpergröße in \si{\centi\metre}, Alter in Lebensjahren, sportliche Aktivität in \si{\hour} pro Woche und die eigene Aussage, ob man Raucher ist oder nicht, auf. Unter den 28 Probanden waren zwölf Frauen und 16 Männer sowie fünf Raucher. Das Gesamtdurchschnittsalter betrug 33 Jahre. Das durchschnittliche Alter der Männer lag bei 35, das der Frauen bei 29 Jahren. Unter den Testpersonen befanden sich fünf Leistungssportler, von denen einer Olympionik ist. Im Mittel lag die wöchentliche sportliche Aktivität der Männer bei sieben, die der Frauen bei sechs Stunden. Anzumerken ist, dass es sich bei diesen Zahlen um subjektive Einschätzungen der Personen handelt, die eventuell nicht die realen Gegebenheiten widerspiegeln. Dies liegt daran, dass "`sportliche Aktivität"' nicht eindeutig definiert ist und einige Probanden keine festen Trainingszeiten besitzen und daher unregelmäßig zum Sport gehen. Die Angaben wurden genutzt, um das Belastungsprotokoll, wie in Kapitel 2.2.1 beschrieben, anzupassen.
 %
 \begin{table}[H]
 	\centering
