--- a/Resultate.tex
+++ b/Resultate.tex
@@ -56,7 +56,7 @@ Die nachfolgende Tab. \ref{tab:tabelle4} zeigt zu jeder Testperson die vorab erm
 	\label{pic:pic15}
 \end{figure}
 %
-Beginnend mit Abb. \ref{pic:pic15} für Probandin 6w werden beispielhaft Grafiken verschiedener Probanden vorgestellt, anhand derer die ventilatorischen Schwellen von den menschlichen Ratern subjektiv bestimmt wurden. Sie bestehen insgesamt aus sechs Feldern. Die ersten vier Felder stellen jeweils eine Methode zur Bestimmung der Schwellen dar. Sie enthalten zur erleichterten optischen Auswertung den Verlauf der \gls{HF} als rosafarbenen gestrichelten Graphen. Je nach Skalierung der Achsen, nimmt diese unterschiedliche Formen an und dient nur zum Vergleich mit den Graphen in demselben Feld. Sie wird durch die rechte Y-Achse skaliert. In Feld 5 und 6 werden die \gls{VE} sowie \gls{VO2} mit der Leistung (hier als "`Watt"' bezeichnet) in Relation gesetzt. Diese Plots wurden erstellt, um den Messungserfolg evaluieren zu können. Die Kreuze in den Kurven stellen die Mittelwerte einer Stufe dar und spiegeln in ihrer Menge die Anzahl der gefahrenen Belastungsstufen wider.
+Beginnend mit Abb. \ref{pic:pic15} für Probandin 6w werden beispielhaft Grafiken verschiedener Probanden vorgestellt, anhand derer die ventilatorischen Schwellen von den menschlichen Ratern subjektiv bestimmt wurden. Sie bestehen insgesamt aus sechs Feldern. Die ersten vier Felder stellen jeweils eine Methode zur Bestimmung der Schwellen dar. Sie enthalten zur erleichterten optischen Auswertung den Verlauf der \gls{HF} als rosafarbenen gestrichelten Graphen. Je nach Skalierung der Achsen, nimmt diese unterschiedliche Formen an und dient nur zum Vergleich mit den Graphen in demselben Feld. Sie wird durch die rechte Y-Achse skaliert. In Feld 5 und 6 werden die \gls{VE} sowie \gls{VO2} mit der Leistung (hier als "`Watt"' bezeichnet) in Relation gesetzt. Diese Plots wurden erstellt, um den Messerfolg evaluieren zu können. Die Kreuze in den Kurven stellen die Mittelwerte einer Stufe dar und spiegeln in ihrer Menge die Anzahl der gefahrenen Belastungsstufen wider.
 %
 \begin{figure}[H]
 	\centering
@@ -74,16 +74,16 @@ In diesem Abschnitt werden weitere Grafiken präsentiert, die zusätzlich eine a
 \begin{figure}[H]
 	\centering
 	\noindent\includegraphics[angle=0,width=\linewidth,keepaspectratio]{Bilder/auto_6}
-	\caption[6-Felder-Grafik von Probandin 6w mit algorithmischen Schwellenmarkierungen]{6-Felder-Grafik von Probandin 6w mit algorithmischen Schwellenmarkierungen in Form vertikaler roter Linien: \textsl{V-Slope} = \SI{106}{\per\minute}, \textsl{\gls{EQO2}} = \SI{106}{\per\minute}, \textsl{\gls{EQCO2}} = \SI{159}{\per\minute}, \textsl{\gls{VE}/\gls{VCO2}} = \SI{159}{\per\minute}\\Feld 5: \gls{VE} in \si{\litre\per\minute} gegenüber der \gls{HF} in \si{\per\minute} mit eingefügten Trainingszonen \gls{REKOM}, \gls{GA1}, \gls{GA2}, \gls{EW} und Leistung, abgegrenzt durch vertikale farbige Linien}
+	\caption[6-Felder-Grafik von Probandin 6w mit algorithmischen Schwellenmarkierungen]{6-Felder-Grafik von Probandin 6w mit algorithmischen Schwellenmarkierungen in Form vertikaler roter Linien: \textsl{V-Slope}~= \SI{106}{\per\minute}, \textsl{\gls{EQO2}} = \SI{106}{\per\minute}, \textsl{\gls{EQCO2}} = \SI{159}{\per\minute}, \textsl{\gls{VE}/\gls{VCO2}} = \SI{159}{\per\minute}\\Feld 5: \gls{VE} in \si{\litre\per\minute} gegenüber der \gls{HF} in \si{\per\minute} mit eingefügten Trainingszonen \gls{REKOM}, \gls{GA1}, \gls{GA2}, \gls{EW} und Leistung, abgegrenzt durch vertikale farbige Linien}
 	\label{pic:pic17}
 \end{figure}
 %
-Die Plots in Abb. \ref{pic:pic17} zeigen die detektierten Schwellen für Probandin 6w nach acht Stufen, bei der jeweils beide Methoden für die VT1 sowie VT2 identische Ergebnisse brachten. Im blauen \gls{EQO2}-Graphen ist zu sehen, dass VT1 zwischen Tiefpunkt und darauffolgendem Messpunkt bestimmt wurde. Am \gls{EQCO2} ist erkennbar, dass die VT2 beim ersten signifikanten Kurvenanstieg markiert wurde. Bei der Probandin stieg in der 7. Stufe der RQ über eins hinaus. Die mithilfe dieser Methode erhobene VT2 liegt bei einer \gls{HF} von \SI{154}{\per\minute}.
+Die Plots in Abb. \ref{pic:pic17} zeigen die detektierten Schwellen für Probandin 6w nach acht Stufen, bei der jeweils beide Methoden für die VT1 sowie VT2 identische Ergebnisse brachten. Im blauen \gls{EQO2}-Graphen ist zu sehen, dass die VT1 zwischen Tiefpunkt und darauffolgendem Messpunkt bestimmt wurde. Am \gls{EQCO2} ist erkennbar, dass die VT2 beim ersten signifikanten Kurvenanstieg markiert wurde. Bei der Probandin stieg in der 7. Stufe der RQ über eins hinaus. Die mithilfe dieser Methode erhobene VT2 liegt bei einer \gls{HF} von \SI{154}{\per\minute}.
 %
 \begin{figure}[H]
 	\centering
 	\noindent\includegraphics[angle=0,width=\linewidth,keepaspectratio]{Bilder/auto_8}
-	\caption[6-Felder-Grafik von Proband 8m mit algorithmischen Schwellenmarkierungen]{6-Felder-Grafik von Proband 8m mit algorithmischen Schwellenmarkierungen: \textsl{V-Slope} = \SI{135}{\per\minute}, \textsl{\gls{EQO2}} = \SI{126}{\per\minute}, \textsl{\gls{EQCO2}} = \SI{169}{\per\minute}, \textsl{\gls{VE}/\gls{VCO2}} = \SI{180}{\per\minute}}
+	\caption[6-Felder-Grafik von Proband 8m mit algorithmischen Schwellenmarkierungen]{6-Felder-Grafik von Proband 8m mit algorithmischen Schwellenmarkierungen: \textsl{V-Slope}~= \SI{135}{\per\minute}, \textsl{\gls{EQO2}} = \SI{126}{\per\minute}, \textsl{\gls{EQCO2}} = \SI{169}{\per\minute}, \textsl{\gls{VE}/\gls{VCO2}} = \SI{180}{\per\minute}}
 	\label{pic:pic18}
 \end{figure}
 %
@@ -93,14 +93,14 @@ Abb. \ref{pic:pic19} stellt das Ergebnis von Proband 9m dar, der sogar 13 Belast
 \begin{figure}[H]
 	\centering
 	\noindent\includegraphics[angle=0,width=\linewidth,keepaspectratio]{Bilder/auto_9}
-	\caption[6-Felder-Grafik von Proband 9m mit algorithmischen Schwellenmarkierungen]{6-Felder-Grafik von Proband 9m mit algorithmischen Schwellenmarkierungen: \textsl{V-Slope} = \SI{94}{\per\minute}, \textsl{\gls{EQO2}} = \SI{112}{\per\minute}, \textsl{\gls{EQCO2}} = \SI{160}{\per\minute}, \textsl{\gls{VE}/\gls{VCO2}} = \SI{128}{\per\minute}}
+	\caption[6-Felder-Grafik von Proband 9m mit algorithmischen Schwellenmarkierungen]{6-Felder-Grafik von Proband 9m mit algorithmischen Schwellenmarkierungen: \textsl{V-Slope}~= \SI{94}{\per\minute}, \textsl{\gls{EQO2}} = \SI{112}{\per\minute}, \textsl{\gls{EQCO2}} = \SI{160}{\per\minute}, \textsl{\gls{VE}/\gls{VCO2}} = \SI{128}{\per\minute}}
 	\label{pic:pic19}
 \end{figure}
 %
 \begin{figure}[H]
 	\centering
 	\noindent\includegraphics[angle=0,width=\linewidth,keepaspectratio]{Bilder/auto_12}
-	\caption[6-Felder-Grafik von Proband 12m mit algorithmischen Schwellenmarkierungen]{6-Felder-Grafik von Proband 12m mit algorithmischen Schwellenmarkierungen: \textsl{V-Slope} = \SI{99}{\per\minute}, \textsl{\gls{EQO2}} = \SI{99}{\per\minute}, \textsl{\gls{EQCO2}} = \SI{159}{\per\minute}, \textsl{\gls{VE}/\gls{VCO2}} = \SI{159}{\per\minute}}
+	\caption[6-Felder-Grafik von Proband 12m mit algorithmischen Schwellenmarkierungen]{6-Felder-Grafik von Proband 12m mit algorithmischen Schwellenmarkierungen: \textsl{V-Slope}~= \SI{99}{\per\minute}, \textsl{\gls{EQO2}} = \SI{99}{\per\minute}, \textsl{\gls{EQCO2}} = \SI{159}{\per\minute}, \textsl{\gls{VE}/\gls{VCO2}} = \SI{159}{\per\minute}}
 	\label{pic:pic20}
 \end{figure}
 %
@@ -109,7 +109,7 @@ In Abb. \ref{pic:pic20} ist eine Auswertung für Proband 12m zu sehen, welcher w
 \begin{figure}[H]
 	\centering
 	\noindent\includegraphics[angle=0,width=\linewidth,keepaspectratio]{Bilder/auto_21}
-	\caption[6-Felder-Grafik von Proband 21m mit algorithmischen Schwellenmarkierungen]{6-Felder-Grafik von Proband 21m mit algorithmischen Schwellenmarkierungen: \textsl{V-Slope} = \SI{151}{\per\minute}, \textsl{\gls{EQO2}} = \SI{118}{\per\minute}, \textsl{\gls{EQCO2}} = \SI{163}{\per\minute}, \textsl{\gls{VE}/\gls{VCO2}} = \SI{183}{\per\minute}}
+	\caption[6-Felder-Grafik von Proband 21m mit algorithmischen Schwellenmarkierungen]{6-Felder-Grafik von Proband 21m mit algorithmischen Schwellenmarkierungen: \textsl{V-Slope}~= \SI{151}{\per\minute}, \textsl{\gls{EQO2}} = \SI{118}{\per\minute}, \textsl{\gls{EQCO2}} = \SI{163}{\per\minute}, \textsl{\gls{VE}/\gls{VCO2}} = \SI{183}{\per\minute}}
 	\label{pic:pic21}
 \end{figure}
 %
@@ -164,8 +164,8 @@ Die vierte Beispielgrafik in Abb. \ref{pic:pic21} zeigt die Ergebnisse des Proba
 	\end{center}
 \end{table}
 %
-In Tab. \ref{tab:tabelle5} werden die Ergebnisse der VT1-Bestimmung der Rater und der Software für alle 28 Testpersonen verglichen. In sechs Spalten wird, geordnet nach Methode und Rater, die \gls{HF} aufgeführt, die an Stelle der VT1 abgelesen bzw. durch die Software bestimmt wurden. Es werden dabei auch nebeneinander die Methoden in direkte Relation gesetzt. Bei einigen Probanden sind zwischen den jeweiligen Ratern bzw. den beiden Methoden Differenzen zu sehen. Zur Visualisierung der Übereinstimmungen bzw. Unterschiede zwischen den VT1-Ergebnissen von Ratern und Software wurde deshalb für jede Methode ein Netzdiagramm erstellt.\\
-Abb. \ref{pic:pic22} zeigt die Netzdiagramme für die VT1. Abb. \ref{subpic:pic1} vergleicht dabei die \gls{HF} für die VT1, die von Ratern und Software durch den V-Slope bestimmt wurden. In Abb. \ref{subpic:pic2} ist das gleiche für das \gls{EQO2} dargestellt. Eine orthogonale Skala definiert die \gls{HF}, die an konzentrischen Kreisen abgelesen werden kann. Der äußerste Kreis stellt eine zweite Skala dar, welche mit den IDs der Probanden beschriftet ist. Radial sind zu jeder ID die Messwerte in den Diagrammen eingesetzt. Zusammen bilden die Messpunkte ein farbig schraffiertes Netz. Die graue Schraffur visualisiert das Netz des 1. Raters, die rote das des 2. Raters und die grüne das der Software. Unterschiedliche Kontraste markieren Bereiche, in denen sich die individuellen Schwellenbestimmungen überlagern. Überlappen sich rot und schwarz, stimmte die entsprechende VT1 beider Rater weitestgehend überein, bei rot und grün waren die Ergebnisse von Rater 2 und Software gut vergleichbar und bei schwarz und grün lagen Rater 1 und Software dicht beieinander.
+In Tab. \ref{tab:tabelle5} werden die Ergebnisse der VT1-Bestimmung der Rater und der Software für alle 28 Testpersonen verglichen. In sechs Spalten wird, geordnet nach Methode und Rater, die \gls{HF} aufgeführt, die an Stelle der VT1 abgelesen bzw. durch die Software bestimmt wurde. Es werden dabei auch nebeneinander die Methoden in direkte Relation gesetzt. Bei einigen Probanden sind zwischen den jeweiligen Ratern bzw. den beiden Methoden Differenzen zu sehen. Zur Visualisierung der Übereinstimmungen bzw. Unterschiede zwischen den VT1-Ergebnissen von Ratern und Software wurde deshalb für jede Methode ein Netzdiagramm erstellt.\\
+Abb. \ref{pic:pic22} zeigt die Netzdiagramme für die VT1. Abb. \ref{subpic:pic1} vergleicht dabei die \gls{HF} für die VT1, die von Ratern und Software durch den V-Slope bestimmt wurden. In Abb. \ref{subpic:pic2} ist das gleiche für das \gls{EQO2} dargestellt. Eine orthogonale Skala definiert die \gls{HF}, die an konzentrischen Kreisen abgelesen werden kann. Der äußere Kreis stellt eine zweite Skala dar, welche mit den IDs der Probanden beschriftet ist. Radial sind zu jeder ID die Messwerte in den Diagrammen eingesetzt. Zusammen bilden die Messpunkte ein farbig schraffiertes Netz. Die graue Schraffur visualisiert das Netz des 1. Raters, die rote das des 2. Raters und die grüne das der Software. Unterschiedliche Kontraste markieren Bereiche, in denen sich die individuellen Schwellenbestimmungen überlagern. Überlappen sich rot und schwarz, stimmte die entsprechende VT1 beider Rater weitestgehend überein, bei rot und grün waren die Ergebnisse von Rater 2 und Software gut vergleichbar und bei schwarz und grün lagen Rater 1 und Software dicht beieinander.
 %
 \begin{figure}[H]
 	\centering
@@ -182,7 +182,7 @@ Abb. \ref{pic:pic22} zeigt die Netzdiagramme für die VT1. Abb. \ref{subpic:pic1
 			\subcaption[Vergleich der VT1-Bestimmungen durch das \acrshort{EQO2}]{Vergleich der VT1-Bestimmungen durch das \gls{EQO2} zwischen Ratern und Software; Intervall: \SIrange{0}{180}{\per\minute}}
 			\label{subpic:pic2}
 	\end{subfigure}
-\caption[Grafische Darstellung der Übereinstimmung für die VT1]{Darstellung der Übereinstimmung zwischen Ratern und Software bei Bestimmung der VT1; Grau: Rater 1; Rot: Rater 2; Grün: Software; Kontrastierungen stellen Übereinstimmungen dar}
+\caption[Grafischer Vergleich der Ergebnisse für die VT1]{Vergleich der Ergebnisse von Ratern und Software bei Bestimmung der VT1; Grau: Rater~1; Rot: Rater~2; Grün: Software; Kontrastierungen stellen Übereinstimmungen dar}
 \label{pic:pic22}
 \end{figure}
 %
@@ -202,10 +202,10 @@ Abb. \ref{pic:pic22} zeigt die Netzdiagramme für die VT1. Abb. \ref{subpic:pic1
 	\label{pic:pic24}
 \end{figure}
 %
-Um zu analysieren, wie stark die Ergebnisse der Rater von denen der Software im Mittel differieren, wurden für beide Methoden Streudiagramme erstellt, in denen die Differenzen aus den gemittelten VT1-Werten der Rater und der Software gegen die Gesamtmittelwerte für alle 28 Personen aufgetragen wurden. In Abb. \ref{pic:pic23} ist das Diagramm für die V-Slope-Methode abgebildet. Der Mittelwert der Differenzen zwischen Ratern und Software ist als rote Linie ins Diagramm einfügt. Die Werte für die VT1, die von Ratern und Software mittels V-Slope bestimmt wurden, unterscheiden sich durchschnittlich um $3,89$ $\pm$14 Schläge pro Minute.\\
+Um zu analysieren, wie stark die Ergebnisse der Rater von denen der Software im Mittel differieren, wurden für beide Methoden Streudiagramme erstellt, in denen die Differenzen aus den gemittelten VT1-Werten der Rater und der Software gegen die Gesamtmittelwerte für alle 28 Personen aufgetragen wurden. In Abb. \ref{pic:pic23} ist das Diagramm für die V-Slope-Methode abgebildet. Der Mittelwert der Differenzen zwischen Ratern und Software ist als rote Linie ins Diagramm einfügt, die \gls{SD} als blaue Linien. Die Werte für die VT1, die von Ratern und Software mittels V-Slope bestimmt wurden, unterscheiden sich durchschnittlich um $3,89$ $\pm$14 Schläge pro Minute.\\
 Abb. \ref{pic:pic24} zeigt das Diagramm für die \gls{EQO2}-Methode mit den Differenzen zwischen Ratern und Software. Dort beträgt diese im Mittel \SI{7,98}{\per\minute} $\pm$14 \si{\per\minute}.
 %
-\subsection{Ergebnisse für VT2}
+\subsection{Ergebnisse für die VT2}
 %
 \begin{table}[H]
 	\begin{center}
@@ -269,7 +269,7 @@ In Tab. \ref{tab:tabelle6} sind die Werte für die \gls{HF} eingetragen, an dene
 		\subcaption[Vergleich der VT2-Bestimmungen durch \acrshort{VE}/\acrshort{VCO2}]{Vergleich der VT2-Bestimmungen durch \acrshort{VE}/\acrshort{VCO2} zwischen Ratern und Software; Intervall: \SIrange{0}{250}{\per\minute}}
 		\label{subpic:pic4}
 	\end{subfigure}
-	\caption[Grafische Darstellung der Übereinstimmung für die VT2]{Darstellung der Übereinstimmung zwischen Ratern und Software bei Bestimmung der VT2; Grau: Rater 1; Rot: Rater 2; Grün: Software; Kontrastierungen stellen Übereinstimmungen dar}
+	\caption[Grafischer Vergleich der Ergebnisse für die VT2]{Vergleich der Ergebnisse von Ratern und Software bei Bestimmung der VT2; Grau: Rater~1; Rot: Rater~2; Grün: Software; Kontrastierungen stellen Übereinstimmungen dar}
 	\label{pic:pic25}
 \end{figure}
 %
